# Notification-bot-for-IT-School

./: .env.example  README.md  main.py  pyproject.toml
app/bot/: bot.py
app/bot/consts/: button_texts.py  buttons_texts.py  commands.py  errors_descriptions.py  label_texts.py  labels_texts.py  paths.py
app/bot/dialogs/: states.py
app/bot/dialogs/account_dialog/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/add_user/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/chat_messages/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/chats/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/faq/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/main_menu/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/message_info/: dialog.py  dialogs.py  getters.py  handlers.py
app/bot/dialogs/recovery/: dialogs.py  getters.py  handlers.py
app/bot/dialogs/recovery/recovery_chats/: getters.py  handlers.py  windows.py
app/bot/dialogs/recovery/recovery_faq/: getters.py  handlers.py  windows.py
app/bot/dialogs/recovery/recovery_messages/: getters.py  handlers.py  windows.py
app/bot/dialogs/unknown_users/: dialogs.py
app/bot/dialogs/users/: dialogs.py  getters.py  handlers.py
app/bot/enums/: message_status.py  message_statuses.py  modes.py  roles.py  user_role.py  user_status.py
app/bot/filters/: filters.py
app/bot/handlers/: menu_handlers.py  other_handlers.py  start_session.py
app/bot/keyboards/: menu_commands.py
app/bot/middlewares/: get_user.py  get_user_role.py  shadow_ban.py
config/: config.py
(+3 files in other folders)
